--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.7",
